samples/_failures_safe/1761556204_2f450a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3f161462.c: In function ‘main’:
./samples/SAFE/__tmp_3f161462.c:144:5: error: expected expression at end of input
  144 |     for (int i = 0; i <
      |     ^~~
./samples/SAFE/__tmp_3f161462.c:144:5: error: expected declaration or statement at end of input
